--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "阿男 <l.weinan@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "jsrsasign": "^8.0.12",
     "node-rsa": "^1.0.7"
   }
 }
